--- a/PersonalBudget_CrossCuting/.project
+++ b/PersonalBudget_CrossCuting/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PersonalBudget_Domain</name>
+	<name>PersonalBudget_CrossCuting</name>
 	<comment></comment>
 	<projects>
 	</projects>
