--- a/PersonalBudget_Api/pom.xml
+++ b/PersonalBudget_Api/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>PersonalBudget_CrossCuting</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.mipresupuesto.personalbudget</groupId>
+			<artifactId>PersonalBudget_DTO</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
