--- a/PersonalBudget_Api/pom.xml
+++ b/PersonalBudget_Api/pom.xml
@@ -14,6 +14,8 @@
 	<description>Componente que permite exponer los diferentes mecanismos de acceso a la aplicación Personal Budget.</description>
 	<properties>
 		<java.version>19</java.version>
+		<sonar.organization>ing3ni3r14-s0ftwar3-edc</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
