--- a/PersonalBudget_Api/pom.xml
+++ b/PersonalBudget_Api/pom.xml
@@ -43,8 +43,11 @@
 			<artifactId>PersonalBudget_DTO</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
