--- a/PersonalBudget_Api/src/main/resources/application.properties
+++ b/PersonalBudget_Api/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-!--spring.datasource.url=jdbc:sqlserver://rg-wf.database.windows.net:1433;database=db-budget;user=userDmlBudget;password=us3rDmlBudg3t;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-
-spring.cloud.vault.uri=http://localhost:8888
-spring.cloud.config.profile=dev
-spring.cloud.vault.application-name=PersonalBudget
-spring.cloud.vault.host=localhost
-spring.cloud.vault.port=8200
-spring.cloud.vault.scheme=http
-spring.cloud.vault.authentication=TOKEN
+!spring.datasource.url=jdbc:sqlserver://rg-wf.database.windows.net:1433;database=db-budget;user=userDmlBudget;password=us3rDmlBudg3t;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+!spring.datasource.url=jdbc:sqlserver://rg-wf.database.windows.net:1433;database=db--budget;user=userDmlBudget;password=us3rDmlBudg3t;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://rg-wf.database.windows.net:1433;database=db--budget
+!spring.datasource.username=userDmlBudget
+!spring.datasource.password=us3rDmlBudg3t
+spring.application.name=gs-vault-config
 spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
-
+spring.cloud.vault.scheme=http
+spring.cloud.vault.kv.enabled=true
+spring.config.import:  vault://
 
 
